frontend/src/parser/snapshots/frontend__parser__test__extra_spaces_cause_errors.snap
---
source: frontend/src/parser/mod.rs
expression: "line_parser().parse(\"tag w !  w ! \").into_output_errors()"
---
(
    Some(
        Line {
            tag: Some(
                Spanned {
                    inner: Tag {
                        name: "tag",
                    },
                    start: 0,
                    end: 3,
                },
            ),
            level: 0,
            commands: [
                Spanned {
                    inner: Write(
                        PostCondition {
                            condition: None,
                            value: [
                                Spanned {
                                    inner: Bang,
                                    start: 6,
                                    end: 7,
                                },
                            ],
                        },
                    ),
                    start: 4,
                    end: 7,
                },
                Spanned {
                    inner: Error,
                    start: 8,
                    end: 8,
                },
                Spanned {
                    inner: Write(
                        PostCondition {
                            condition: None,
                            value: [
                                Spanned {
                                    inner: Bang,
                                    start: 11,
                                    end: 12,
                                },
                            ],
                        },
                    ),
                    start: 9,
                    end: 12,
                },
            ],
        },
    ),
    [
        found '' '' at 8..9 expected ''w'', ''i'', or ''e'',
    ],
)
