frontend/src/parser/snapshots/frontend__parser__test__parser-2.snap
---
source: frontend/src/parser/mod.rs
expression: "line_parser().parse(\"tag w \\\"\\\" \").into_result()"
---
Ok(
    Line {
        tag: Some(
            Spanned {
                inner: Tag {
                    name: "tag",
                },
                start: 0,
                end: 3,
            },
        ),
        level: 0,
        commands: [
            Spanned {
                inner: Write(
                    PostCondition {
                        condition: None,
                        value: [
                            Spanned {
                                inner: Expression(
                                    String(
                                        Value {
                                            content_as_utf8: "",
                                        },
                                    ),
                                ),
                                start: 6,
                                end: 8,
                            },
                        ],
                    },
                ),
                start: 4,
                end: 8,
            },
        ],
    },
)
