frontend/src/parser/snapshots/frontend__parser__test__recover_from_extra_space.snap
---
source: frontend/src/parser/mod.rs
expression: "line_parser().parse(\" w !  w ! \").into_output_errors()"
---
(
    Some(
        Line {
            tag: None,
            level: 0,
            commands: [
                Spanned {
                    inner: Write(
                        PostCondition {
                            condition: None,
                            value: [
                                Spanned {
                                    inner: Bang,
                                    span: 3..4,
                                },
                            ],
                        },
                    ),
                    span: 1..4,
                },
                Spanned {
                    inner: Error,
                    span: 5..5,
                },
                Spanned {
                    inner: Write(
                        PostCondition {
                            condition: None,
                            value: [
                                Spanned {
                                    inner: Bang,
                                    span: 8..9,
                                },
                            ],
                        },
                    ),
                    span: 6..9,
                },
            ],
        },
    ),
    [
        found '' '' at 5..6 expected write, if, else, set, for, quit, kill, do, brake, or close,
    ],
)
